	* lib/ofx_preproc.cpp: Make sure all results of string::find are           inside the string's length; make sure to erase parts of the string           only if the string is long enough.           Fixes crash http://bugzilla.gnome.org/show_bug.cgi?id=353986           Patch supplied by Christian Stimming from GnuCash